# galactic-dynamics-bovy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  mkdocs.yml  mkdocs_hooks.py  pyproject.toml
.github/workflows/: quality.yml  release.yml
docs/: chapter02.1.md  chapter02.2.md  chapter03.1.md  chapter04.1.md  chapter04.2.md  chapter05.1.md  chapter05.2.md  chapter05.anisotropic-dfs.md  chapter06.1.md  errata.md  index.md  refs.bib
docs/javascripts/: mathjax.js  mermaid.js
docs/stylesheets/: extra.css
galactic_dynamics_bovy/: __init__.py
galactic_dynamics_bovy/chapter02/: __init__.py  effective_radius_gamma.py  fermi_gas_vcirc.py  ic_2574.py  nbody_1d.py  rvir_mvir.py  spherical_exponential.py  vcirc_profiles.py
galactic_dynamics_bovy/chapter03/: __init__.py  nfw_concentration.py  planet_comet_scattering.py
galactic_dynamics_bovy/chapter04/: __init__.py  adiabatic_isochrone.py  gr_precession.py  gr_precession_s2.py
galactic_dynamics_bovy/chapter05/: __init__.py  cored_isothermal_sphere.py  isothermal_gaussian_limit.py  nfw_jeans_dispersion.py  sidm_composite_halo.py  sidm_scatter_radius.py
galactic_dynamics_bovy/chapter06/: __init__.py  dsph_mass_anisotropy.py  hernquist_los_dispersion.py  local_group_timing.py
galactic_dynamics_bovy/utils/: __init__.py  assets.py  units.py
scripts/: generate_assets.py  run_affected_tests.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/galactic_dynamics_bovy/: __init__.py
tests/unit/galactic_dynamics_bovy/chapter02/: __init__.py  test_effective_radius_gamma.py  test_fermi_gas_vcirc.py  test_ic_2574.py  test_nbody_1d.py  test_rvir_mvir.py  test_spherical_exponential.py  test_vcirc_profiles.py
tests/unit/galactic_dynamics_bovy/chapter03/: __init__.py  test_nfw_concentration.py  test_planet_comet_scattering.py
tests/unit/galactic_dynamics_bovy/chapter04/: __init__.py  test_adiabatic_isochrone.py  test_gr_precession.py  test_gr_precession_s2.py
tests/unit/galactic_dynamics_bovy/chapter05/: __init__.py  test_cored_isothermal_sphere.py  test_isothermal_gaussian_limit.py  test_nfw_jeans_dispersion.py  test_sidm_composite_halo.py  test_sidm_scatter_radius.py
tests/unit/galactic_dynamics_bovy/chapter06/: __init__.py  test_dsph_mass_anisotropy.py  test_hernquist_los_dispersion.py  test_local_group_timing.py
tests/unit/galactic_dynamics_bovy/utils/: test_assets.py  test_units.py
tests/unit/scripts/: test_generate_assets.py  test_run_affected_tests.py
