[project]
name = "galactic-dynamics-bovy"
version = "0.5.2"
description = "Solutions to problems from Dynamics and Astrophysics of Galaxies by Jo Bovy (Princeton University Press)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = [
    "galactic dynamics",
    "astrophysics",
    "galaxies",
    "astronomy",
    "galpy",
    "textbook solutions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "galpy>=1.9.0",
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "astropy>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "scipy-stubs>=1.11.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.0.0",
    "commitizen>=4.0.0",
    "rich>=13.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-bibtex>=2.0.0",
    "mkdocs-macros-plugin>=1.0.0",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules --cov=galactic_dynamics_bovy --cov-report=term-missing --cov-fail-under=100"
filterwarnings = [
    "ignore:Using C implementation to integrate orbits:galpy.util.galpyWarningVerbose",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pydocstyle]
convention = "numpy"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
